[project]
name = "random-32-key-base64"
version = "0.1.0"
description = "Generate a 32-byte random key using random.org and encode it in base64"
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
random-32-key-base64 = "random_32_key_base64:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
